[CORE][DP][SQL] Remember to test always new revs on your test server! (Report bug on forum www.l2jfrozen.com/forum) - Fixed acumen npc buffer. (thanks solton57010) - Added Siren dance on scheme buffer. (thanks .i.) - Fixed Crystal S ID on gmshop. (thanks .i.) - Fixed location for npc id 31853. - Corrected McritMulDif on M crit calculation. - Fixed flag player hitting with pole Mobs/players. - Fixed if target is not auto attackable you give only one hit. (like L2OFF) - Fixed augmentation, it's possible to use low level stone on hight level items. (like L2OFF) - Fixed all augmentations Item skill: Paralyze. - Implemented Zone type "NoStoreZone". - Implemented getCurrentPetSkill(). - Fixed default value for Gameserver and Loginserver startup. - Fixed backstab issue. - Fixed onAttack update heading position. - Corrected inFront() method position.