@@ -10,7 +10,7 @@ echo.
 
 REM -------------------------------------
 REM Default parameters for a basic server.
-java -Dfile.encoding=UTF8 -Xmx1024m -Xms512m -Xmn256m -XX:PermSize=128m -XX:SurvivorRatio=8 -Xnoclassgc -XX:+AggressiveOpts -XX:+UseSerialGC -cp ./lib/*;l2jfrozen-core.jar com.l2jfrozen.gameserver.GameServer
+java -Dfile.encoding=UTF8 -Xms1024m -Xmx1024m -cp ./lib/*;l2jfrozen-core.jar com.l2jfrozen.gameserver.GameServer
 REM
 REM If you have a big server and lots of memory, you could experiment for example with
 REM java -server -Xmx1536m -Xms1024m -Xmn512m -XX:PermSize=256m -XX:SurvivorRatio=8 -Xnoclassgc -XX:+AggressiveOpts
